--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -7,6 +7,36 @@
     <link rel="stylesheet" href="./output.css">
 </head>
 <body>
-    
+    <!-- header -->
+    <header class="bg-[#E2E2B6] flex justify-between px-8 py-4 md:px-12 md:py-4">
+        <img src="../assets/chaicode-black.svg" alt="" srcset="" class="max-w-24  md:max-w-28">
+
+        <nav class="hidden md:flex md:justify-between md:list-none gap-4 lg:gap-12 md:text-[1.1rem] font-semibold ">
+            <li class="hover:text-[#181C14]">Cohorts</li>
+            <li>Udemy</li>
+            <li>Docs</li>
+            <li>Reviews</li>
+        </nav>
+
+        <button class="hidden md:block border-2 rounded-2xl px-3 text-center md:px-10 text-[1.1rem] font-semibold">Login</button>
+        <div class="block md:hidden"><i class="fa-solid fa-bars"></i></div>
+
+        <!-- sidebar -->
+        <!-- <div class="hidden inset-0 z-10 md:hidden">
+            <nav class="flex justify-between px-8 py-4">
+                <img src="../assets/chaicode-black.svg" alt="" srcset="" class="max-w-24  md:max-w-28">
+
+                <div class="block md:hidden"><i class="fa-solid fa-xmark"></i></div>
+            </nav>
+            <hr>
+
+            <ul class="flex flex-col gap-10 px-12 py-4">
+                <li><a href="#">Cohorts</a></li>
+                <li><a href="#">Udemy</a></li>
+                <li><a href="#">Docs</a></li>
+                <li><a href="#">Reviews</a></li>
+            </ul>
+        </div> -->
+    </header>
 </body>
 </html>
