Adding Tweet-section to page

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -60,7 +60,27 @@
     </section>
     <hr>
 
-    
+    <!-- tweet-section -->
+    <div class="my-font m-auto bg-[#000000]">
+        <h1 class="text-4xl text-[#fafafa] text-center font-extrabold py-8 lg:text-6xl lg:py-18">Tweets Love</h1>
+
+        <div class="flex gap-4 md:gap-24 py-12 px-12">
+            <div class="item border-2 border-amber-100 max-w-fit rounded-xl">
+                <img src="../assets/tweet-1.png" alt="" srcset="" class="w-50 h-50 rounded-xl lg:w-80 lg:h-80">
+            </div>
+            <div class="item border-2 border-amber-100 max-w-fit rounded-xl">
+                <img src="../assets/tweet-2.png" alt="" srcset="" class="w-50 h-50 rounded-xl lg:w-80 lg:h-80">
+            </div>
+            <div class="item">
+                <img src="" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img src="" alt="" srcset="">
+            </div>
+        </div>
+    </div>
+
+
 
 
 </body>
