--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -244,6 +244,25 @@ background-image: linear-gradient(180deg, #2d3436 0%, #000000 74%);" class="my-f
             </div>
         </div>
     </section>
+<hr class="text-amber-50">
+
+
+    <!-- community-section -->
+    <section class="bg-black text-white">
+        <div class="grid grid-rows-2 md:grid-rows-1 md:grid-cols-2 md:gap-10 px-4 py-8 md:py-12">
+            <div class="text-content pl-4 md:pl-12">
+                <h1 class="text-3xl font-semibold">Discord Community</h1>
+                <p class="py-4">Join our Community where Activity thrives.</p>
+                <p class="py-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus nihil asperiores natus quisquam. Iusto porro vero, quam dignissimos distinctio voluptas..</p>
+                <button class="border-[1px] border-neutral-800 hover:scale-102 shadow-amber-100 shadow-xs rounded-xl px-5 py-3 my-10">Join Discord</button>
+            </div>
+            <div class="img-content place-items-center">
+                <img class="h-80 w-sm inset-0 overflow-hidden rounded-xl" src="../assets/tweet-2.png" alt="" srcset="">
+            </div>
+        </div>    
+    </section>
+    <hr class="text-amber-50">
+
 
 <script src="./index.js"></script>
 </body>
