--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -264,6 +264,64 @@ background-image: linear-gradient(180deg, #2d3436 0%, #000000 74%);" class="my-f
     <hr class="text-amber-50">
 
 
+    <!-- footer-section -->
+    <section class="footer">
+        <footer class="bg-black text-white">
+            <div class="grid grid-cols-1 md:grid-cols-2 py-8 md:py-14">
+                <div class="pl-10 md:pl-14">
+                    <h2 class="text-2xl">Lets talk us</h2>
+                    <h3 class="">Connect with our socials</h3>
+                    <div class="list-none flex gap-5 py-4">
+                        <li class="p"><a href=""><i class="fa-brands fa-x"></i></a></li>
+                        <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href=""><i class="fa-brands fa-linkedin"></i></i></a></li>
+                        <li><a href=""><i class="fa-brands fa-github"></i></a></li>
+                    </div>
+                </div>
+                <div class="grid grid-cols-2">
+                    <div class="text-center mx-4">
+                        <span class="font-semibold py-2">Useful links</span>
+                        <ul class="pr-2">
+                            <li class="text-sm"><a href="#">About us</a></li>
+                            <li class="text-sm"><a href="#">Masterjii</a></li>
+                            <li class="text-sm"><a href="#">Products</a></li>
+                            <li class="text-sm"><a href="#">Chai Docs</a></li>
+                        </ul>
+                    </div>
+                    <div class="text-center mx-4">
+                        <span class="font-semibold py-2">Useful links</span>
+                        <ul class="">
+                            <li class="text-sm"><a href="#">About us</a></li>
+                            <li class="text-sm"><a href="#">Masterjii</a></li>
+                            <li class="text-sm"><a href="#">Products</a></li>
+                            <li class="text-sm"><a href="#">Chai Docs</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <!-- <hr class="text-amber-50"> -->
+
+            <div class="">
+                <h2 class="m-auto text-center py-4">Download the ChaiCode app</h2>
+                <div class="buttons m-auto text-center py-4">
+                    <button class="border-[1px] rounded-sm px-4 py-2 mr-8"><i class="fa-brands fa-google-play"></i>Android</button>    
+                    <button class="border-[1px] rounded-sm px-4 py-2"><i class="fa-brands fa-apple"></i>IOS</button>
+                </div>    
+
+                <div class="flex justify-between md:justify-around py-4 text-[9px] md:text-sm">
+                    <span class="pl-6 md:pl-4">Chaicode</span>
+                    <ul class="flex gap-2 md:gap-4 pr-6 md:pr-4">
+                        <li>Copyright</li>
+                        <li>Terms & Conditions</li>
+                        <li>Refund Policy</li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
+            
+    </section>
+        
 <script src="./index.js"></script>
 </body>
 </html>
